--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,69 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glitch-text {
+  animation: glitch 2s linear infinite;
+}
+
+@keyframes glitch {
+  2%,
+  64% {
+    transform: translate(1px, 0) skew(0deg);
+  }
+  4%,
+  60% {
+    transform: translate(-1px, 0) skew(0deg);
+  }
+  62% {
+    transform: translate(0, 0) skew(5deg);
+  }
+}
+
+.glitch-text:before,
+.glitch-text:after {
+  content: attr(title);
+  position: absolute;
+  left: 0;
+  color: #080808;
+}
+
+.glitch-text:before {
+  animation: glitchTop 1.5s linear infinite;
+  clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 33%, 0 33%);
+}
+
+@keyframes glitchTop {
+  2%,
+  64% {
+    transform: translate(2px, -2px);
+  }
+  4%,
+  60% {
+    transform: translate(-2px, 2px);
+  }
+  62% {
+    transform: translate(13px, -1px) skew(-13deg);
+  }
+}
+
+.glitch-text:after {
+  animation: glitchBotom 2.5s linear infinite;
+  clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
+}
+
+@keyframes glitchBotom {
+  2%,
+  64% {
+    transform: translate(-1px, 0);
+  }
+  4%,
+  60% {
+    transform: translate(-1px, 0);
+  }
+  62% {
+    transform: translate(-11px, 2px) skew(21deg);
+  }
+}
