Correct typo, complicate glitch text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,12 +49,12 @@
 }
 
 .glitch-text:after {
-  animation: glitchBotom 2.5s linear infinite;
+  animation: glitchBottom 2.5s linear infinite;
   clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
   -webkit-clip-path: polygon(0 67%, 100% 67%, 100% 100%, 0 100%);
 }
 
-@keyframes glitchBotom {
+@keyframes glitchBottom {
   2%,
   64% {
     transform: translate(-1px, 0);
